- types
  - Extra keyword arguments to the base Float 
    type beyond "precision" and "asdecimal" are ignored;
    added a deprecation warning here and additional
    docs, related to [ticket:2258]

- sqlite
  - Ensured that the same ValueError is raised for
    illegal date/time/datetime string parsed from
    the database regardless of whether C 
    extensions are in use or not.

- postgresql
  - Reflection functions for Table, Sequence no longer
    case insensitive.  Names can be differ only in case
    and will be correctly distinguished.  [ticket:2256]

  - Use an atomic counter as the "random number" 
    source for server side cursor names; 
    conflicts have been reported in rare cases.

  - Narrowed the assumption made when reflecting
    a foreign-key referenced table with schema in
    the current search path; an explicit schema will
    be applied to the referenced table only if 
    it actually matches that of the referencing table,
    which also has an explicit schema.   Previously
    it was assumed that "current" schema was synonymous
    with the full search_path.  [ticket:2249]

- mssql
  - Changes to attempt support of FreeTDS 0.91 with 
    Pyodbc.  This includes that string binds are sent as 
    Python unicode objects when FreeTDS 0.91 is detected,
    and a CAST(? AS NVARCHAR) is used when we detect 
    for a table.   However, I'd continue
    to characterize Pyodbc + FreeTDS 0.91 behavior as 
    pretty crappy, there are still many queries such 
    as used in reflection which cause a core dump on 
    Linux, and it is not really usable at all
    on OSX, MemoryErrors abound and just plain broken 
    unicode support.   [ticket:2273]

  - The behavior of =/!= when comparing a scalar select
    to a value will no longer produce IN/NOT IN as of 0.8;
    this behavior is a little too heavy handed (use in_() if
    you want to emit IN) and now emits a deprecation warning.   
    To get the 0.8 behavior immediately and remove the warning, 